Gestion des tâches et authentification

--- a/src/app/pages/task-list/task-list.page.html
+++ b/src/app/pages/task-list/task-list.page.html
@@ -1,21 +1,40 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>task-list</ion-title>
+    <ion-title>Liste des tâches</ion-title>
     <ion-buttons slot="start">
-      <ion-back-button></ion-back-button>
+      <ion-menu-button></ion-menu-button>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content class="ion-padding">
+  <ion-fab vertical="top" horizontal="end" slot="fixed" edge="true">
+    <ion-fab-button (click)="presentAddTaskAlert()">
+      <ion-icon name="add"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
   <ion-list>
-    <ion-item *ngFor="let task of taskList">
-      <ion-label>{{ task.taskName }}</ion-label>
-      <ion-checkbox
-        slot="start"
-        [(ngModel)]="task.done"
-        (ionChange)="statusChange(task)"
-      ></ion-checkbox>
-    </ion-item>
+    <ion-item-sliding *ngFor="let task of taskList">
+      <ion-item>
+        <ion-label>{{ task.taskName }}</ion-label>
+        <ion-checkbox
+          slot="start"
+          [(ngModel)]="task.done"
+          (ionChange)="statusChange(task)"
+        ></ion-checkbox>
+      </ion-item>
+      <ion-item-options side="end">
+        <ion-item-option>
+          <ion-button (click)="presentUpdateTaskAlert(task)">
+            <ion-icon name="create" slot="icon-only"></ion-icon>
+          </ion-button>
+        </ion-item-option>
+        <ion-item-option>
+          <ion-button (click)="presentDeleteTaskAlert(task.id)">
+            <ion-icon name="trash" color="danger" slot="icon-only"></ion-icon>
+          </ion-button>
+        </ion-item-option>
+      </ion-item-options>
+    </ion-item-sliding>
   </ion-list>
 </ion-content>
